<resources>
    <string name="app_name">Demo Dynamic ListView Colour List</string>
    <string name="powered_by_xi_xin">Powered by Xi Xin</string>
    <string name="enter_new_colour">Enter New Colour</string>
    <string name="enter_position_number">Enter position number</string>
    <string name="add_new_colour">Add new colour</string>
    <string name="remove_a_colour">Remove a colour</string>
    <string name="update_a_colour">update a colour</string>
</resources>